<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/EditNoteFragment"
    android:name="pt.ulisboa.tecnico.muc.notepad.EditNoteFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/fragment_margin"
    android:label="@string/edit_note_fragment_label"
    tools:context=".EditNoteFragment">

    <EditText
        android:id="@+id/title_edit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        android:gravity="center"
        android:hint="@string/title_hint"
        android:inputType="textMultiLine"
        android:textAlignment="center"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/body_edit"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="66dp"
        android:autofillHints=""
        android:gravity="top|start"
        android:hint="@string/body_hint"
        android:inputType="textMultiLine"
        android:scrollbarStyle="outsideOverlay"
        android:scrollbars="vertical"
        android:textSize="20sp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/save_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:contentDescription="@string/save_fab_content_description"
        app:srcCompat="@android:drawable/ic_menu_save"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/discard_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:layout_margin="@dimen/fab_margin"
        android:contentDescription="@string/discard_fab_content_description"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
        tools:ignore="MissingConstraints" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
